prevent positive random jumps in MovieClip

--- a/thing-editor/src/editor/style-timeline.css
+++ b/thing-editor/src/editor/style-timeline.css
@@ -190,9 +190,6 @@
 	fill: none;
 	stroke: rgb(41, 119, 184);
 	stroke-width: 1.5;
-}
-
-.keyframe-random-meter-neg {
 	left: unset;
 	right: 100%;
 }
